overflow bugfix for large chunks of text

--- a/src/app/posts/post-view-detail/post-view-detail.component.scss
+++ b/src/app/posts/post-view-detail/post-view-detail.component.scss
@@ -16,6 +16,11 @@
 
   &__description {
     flex: 2;
+    overflow-y: auto;
+  }
+
+  &__coords {
+    padding-top: 1em;
   }
 
   &__backlink {
